out of screen error fix

--- a/styles.css
+++ b/styles.css
@@ -151,8 +151,8 @@ h2 {
     display: flex;
     flex-direction: column-reverse;
 
-    min-height: max-content;
-    min-width: min-content;
+    min-height: fit-content;
+    min-width: 65%;
     max-height: 80%;
     max-width: 65%;
 
@@ -187,7 +187,7 @@ h2 {
     justify-content: start;
 
     min-height: fit-content;
-    min-width: fit-content;
+    min-width: 100%;
     max-width: 100%;
     max-height: 100%;
 
